--- a/2PagePresentationBUT.html
+++ b/2PagePresentationBUT.html
@@ -11,22 +11,22 @@
 		<!-- HEADER -->
 		<header>
 			<div class="contenu-header">
-				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="">
-                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="">
-                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="">
+				<img id="logo-IUT3" alt="Logo de l'IUT Paul Sabatier" src="img/logo-IUT-UT3.jpg">
+                <img id="logo-UT3" alt="Logo de l'Université Paul Sabatier" src="img/logo-UT3.png">
+                <img id="logo-BUT" alt="Logo du Bachelor Universitaire de Technologie" src="img/logo_BUT.png">
 				<nav>
 				    <ul>
-                        <li><a href="1PageAccueil.html">Accueil</a></li>
-                        <li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-                        <li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
-                            <ul class="sous">
-                                <li><a href="3PageComp1">Compétence 1</a></li>
-                                <li><a href="4PageComp2">Compétence 2</a></li>
-                                <li><a href="5PageComp3">Compétence 3</a></li>
-                                <li><a href="6PageComp4">Compétence 4</a></li>
-                                <li><a href="7PageComp5">Compétence 5</a></li>
-                                <li><a href="8PageComp6">Compétence 6</a></li>
-                            </ul>
+                    <li><a href="1PageAccueil.html">Accueil</a></li>
+					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
+					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
+						<ul class="sous">
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
+						</ul>
                         </li>
                         <li><a href="9PageContact.html">Contact</a></li>
 				    </ul>
@@ -35,7 +35,7 @@
 		</header>
 		
 		<main>	
-		<div class="contenu">
+		<div>
 			
 			<h1 class="but"> Présentation du BUT </h1>
 
@@ -177,7 +177,6 @@
                             <td>11</td>
                         </tr>
                     </table>
-                </div>   
                 </div>
             </article>
 				
@@ -186,7 +185,7 @@
             <section class="competences">
 
                 <article class="blocGauche flex pointille">
-                    <a href="3PageComp1.html"><img src="competence1.png" class="img"></a>
+                    <a href="3PageComp1.html"><img src="img/competence1.png" alt="Competence 1" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.01</li>
                         <li>Ressource R1.02</li>
@@ -194,7 +193,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href="4PageComp2.html"><img src="competence2.png" class="img"></a>
+                    <a href="4PageComp2.html"><img src="img/competence2.png" alt="Competence 2" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.01</li>
                         <li>Ressource R1.02</li>
@@ -204,7 +203,7 @@
                     </ul>
                 </article>
                 <article class="blocGauche flex pointille">
-                    <a href="5PageComp3.html"><img src="competence3.png" class="img"></a>
+                    <a href="5PageComp3.html"><img src="img/competence3.png" alt="Competence 3" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.03</li>
                         <li>Ressource R1.04</li>
@@ -213,7 +212,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href="6PageComp4.html"><img src="competence4.png" class="img"></a>
+                    <a href="6PageComp4.html"><img src="img/competence4.png" alt="Competence 4" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.05</li>
                         <li>Ressource R1.06</li>
@@ -221,7 +220,7 @@
                     </ul>
                 </article>
                 <article class="blocGauche flex pointille">
-                    <a href="7PageComp5.html"><img src="competence5.png" class="img"></a>
+                    <a href="7PageComp5.html"><img src="img/competence5.png" alt="Competence 5" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.02</li>
                         <li>Ressource R1.08</li>
@@ -229,7 +228,7 @@
                     </ul>
                 </article>
                 <article class="blocDroit flex pointille">
-                    <a href="8PageComp6.html"><img src="competence6.png" class="img"></a>
+                    <a href="8PageComp6.html"><img src="img/competence6.png" alt="Competence 6" class="img"></a>
                     <ul class="tableauC">
                         <li>Ressource R1.02</li>
                         <li>Ressource R1.08</li>
@@ -240,6 +239,11 @@
                     </ul>
                 </article>
             </section>
+		</div>
+		
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
 	
 		</main>
@@ -252,7 +256,6 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
 								<li><a href="3PageComp1.html">Compétence 1</a></li>
