--- a/3PageComp1.html
+++ b/3PageComp1.html
@@ -1,12 +1,12 @@
-<!-- PAGE COMPETENCE 1 -->
-<!DOCTYPE HTML>
+<!-- PAGE COMPETENCE & -->
+<!DOCTYPE html>
+
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
-		<link href="style.css" rel="stylesheet">
-		<title>Compétence 1</title>	
+		<title>Compétence 1</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
-	
 	<body>
 		<!-- HEADER -->
 		<header>
@@ -20,12 +20,12 @@
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
 					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -34,11 +34,142 @@
 			</div>
 		</header>
 		
-		<main>	
-		<div class="contenu">
-
-		<h1> Compétence 1</h1>
-	
+		<main>
+		<!-- TITRE -->
+		<h1 class="but">Réaliser un développement d'application</h1>
+		
+		
+		<!-- ARTICLE 1 : APPRENTISSAGE CRITIQUE DU NIVEAU 1-->
+		<article class="flex">
+			<img src="img/competence1.png" alt="Niveau 1 : Développer des applications informatiques simples">
+			<ul>
+				<li>Implémenter des conceptions simples</li>
+				<li>Elaborer des conceptions simples</li>
+				<li>Faire des essais et évaluer leurs résultats en regard des spécifications</li>
+				<li>Développer des interfaces utilisateurs</li>
+			</ul>
+		</article>
+		
+		<!-- ARTICLE 2 : EVALUATION-->
+		<article class="separateur">
+			<h2>Evaluation de la compétence</h2>
+			<table>
+				<tr>
+					<th class="titre" colspan="4">Ressources intervenant dans la compétence 1</th>
+				</tr>
+				<tr>
+					<th scope="row">Ressource</th>
+					<th scope="col">R1.01</th>
+					<th scope="col">R1.02</th>
+					<th scope="col">R1.10</th>
+				</tr>
+				<tr>
+					<th scope="row">Coefficient (en %)</th>
+					<td>42</td>
+					<td>12</td>
+					<td>6</td>
+				</tr>
+			</table>
+		</article>
+		
+		<!-- ARTICLE 3 : SAE LIE A LA COMPETENCE-->
+		<article>
+			<h2>SAE lié à la compétence</h2>
+			<p>
+			En partant d'un besoin exprimé par un client, l'objectif est de réaliser une
+			<strong>application</strong> qui réponde à ce besoin. Cette SAE permet une 
+			première mise en pratique du <strong>développement</strong> autour d'un besoin 
+			client.
+			</p>
+		</article>
+		<div class="decorateur"></div>
+		
+		<!-- ARTICLE 4 : ENSEMBLE DES RESSOURCES INTERVENANT DANS LA COMPETENCE-->
+		<article class="articleSection">
+			<section class="box">
+				<h3>R1.01</h3>
+				<h3>Initiation au développement</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 1 : Implémenter des conceptions simples</li>
+						<li>AC 2 : Elaborer des conceptions simples</li>
+						<li>AC 3 : Faire des essais et évaluer leurs regard des spécifications</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est l'initiation au développement. Les savoirs
+						de référence suivants devont être étudiés :</h4>
+						<li>Algorithmes fondamentaux (structures simples, recherche d'un élément,
+						parcours, tri...)</li>
+						<li>Algorithmes sur les structures de données (itératifs et/ou récursifs)</li>
+						<li>Manipulation de listes, tableaux, collections dynamiques, statiques (accès 
+						direct ou séquntiels), piles, files, structures;</li>
+						<li>Types abstraits de données simples : première approche de l'encapsulation</li>
+						<li>Notions de modularité</li>
+						<li>Premières notions de qualité (ex : nommage, assertions, documentation, sûreté de 
+						fonctionnement, jeu d'essais, performance...);</li>
+						<li>Lecture/écriture de fichiers</li>
+						<li>Présentation de la gestion de versions.</li>
+					</ul>
+					<p>
+						Cette ressources est à la base des apprentissages des compétences 1 et 2. En effet,
+						la réalisation d'un développement d'application et l'optimisation des applications
+						informatiques nécessitent l'apprentissage du développement.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.02</h3>
+				<h3>Développement d'interfaces web</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 4 : Développer des interfaces utilisateurs</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est d'apprendre les techniques de création de documents
+						numériques sur le web en réponse à des besoins client. Les savoirs de références suivants
+						devront être étudiés :</h4>
+						<li>Spécifications d'interfaces utilisateurs, maquettage(sketch, scénarios, persona...);</li>
+						<li>Les technologies d'affichage du Web (ex : HTML, CSS...);</li>
+						<li>Tester la conformité des sites Web aux standards d'accessibilité W3C/WAI (World Wide Web 
+						Consortium / Web Accessibility Initiative).</li>
+					</ul>
+						<p>
+						Cette ressources est une concrétisation de la compétence 1 avec le support de la compétence 5.
+						En effet, l'apprentissage des interfaces web est une base pour réaliser un développement
+						d'application tout en appréhendant les besoins du client et de l'utilisateur.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.10</h3>
+				<h3>Anglais technique</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 3 : Faire des essais et évaluer leurs résultats en regard des spécifications</li>
+						<li>AC 4 : Développer des interfaces utilisateurs</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est d'introduire l'anglais informatique et de développer
+						sa culture générale et scientifique. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Décrire en anglais les éléments liés aux applications (interface utilisateur, bases 
+						de données, messages d'erreur...);</li>
+						<li>Savoir maîtriser les techniques de présentation orale 1;</li>
+						<li>Rendre compte à l'écrit et à l'oral de façon informelle;</li>
+						<li>Utiliser la termnologie adéquate, les structures grammaticales adaptées et les outils
+						de la phonologie;</li>
+						<li>Trouver, consulter et comprendre des ressources en anglais (documentations, tutoriels...).</li>
+					</ul>
+					<p>
+						Cette ressources permet l'acquisition du vocabulaire de base de l'informatique technique qui est
+						utilisé très largement dans toute la discipline, en particulier dans les domaines les plus techniques.</p>
+				</div>
+			</section>
+		</article>
+		
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
 		
 		</main>
@@ -51,15 +182,14 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
