--- a/4PageComp2.html
+++ b/4PageComp2.html
@@ -20,12 +20,12 @@
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
 					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -34,14 +34,195 @@
 			</div>
 		</header>
 		
-		<main>	
-		<div class="contenu">
-
-		<h1> Compétence 2</h1>
-	
-		</div>
+		<main>
+		<!-- TITRE -->
+		<h1 class="but">Optimiser des applications informatiques</h1>
 		
-		</main>
+		<!-- ARTICLE 1 -->
+		<article class="flex">
+			<img src="img/competence2.png" alt="Niveau 1 : Appréhender et construire des algorithmes">
+			<ul>
+				<li>Analyser un problème avec méthode (découpage en éléments algorithmiques
+				simples, structure de données... </li>
+				<li>Comparer des algorithmes pour des pronlèmes classiques (tri simples, recherche...);</li>
+				<li>Expérimenter la notion de compilation et les représentations bas niveau des données</li>
+				<li>Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+			</ul>
+		</article>
+		
+		<!-- ARTICLE 2 -->
+		<article class="separateur">
+			<h2>Evaluation de la compétence</h2>
+			<table>
+				<tr>
+					<th class="titre" colspan="6">Ressources intervenant dans la compétence 2</th>
+				</tr>
+				<tr>
+					<th scope="row">Ress</th>
+					<th scope="col">R1.01</th>
+					<th scope="col">R1.03</th>
+					<th scope="col">R1.04</th>
+					<th scope="col">R1.06</th>
+					<th scope="col">R1.07</th>
+				</tr>
+				<tr>
+					<th scope="row">Coeff (en %)</th>
+					<td>24</td>
+					<td>3</td>
+					<td>3</td>
+					<td>15</td>
+					<td>15</td>
+				</tr>
+			</table>
+		</article>
+		
+		<!-- ARTICLE 3 -->
+		<article>
+			<h2>SAE lié à la compétence</h2>
+			<p>
+			En partant d'un besoin exprimé par un client, il faut réaliser une implémentation,
+			comparer plusieurs approches pour la résolution d'un problème et effectuer des
+			mesures de performance simples. Cette SAE permet une première <strong>réflexion</strong>
+			autour des stratégies <strong>algorithmiques</strong> pour résoudre un même problème.
+			</p>
+		</article>
+		<div class="decorateur"></div>
+		
+		<!-- ARTICLE 4 -->
+		<article class="articleSection">
+			<section class="box">
+				<h3>R1.01</h3>
+				<h3>Initiation au développement</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 1 : Analyser un problème avec méthode</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est l'initiation au développement. Les savoirs
+						de référence suivants devont être étudiés :</h4>
+						<li>Algorithmes fondamentaux (structures simples, recherche d'un élément,
+						parcours, tri...)</li>
+						<li>Algorithmes sur les structures de données (itératifs et/ou récursifs)</li>
+						<li>Manipulation de listes, tableaux, collections dynamiques, statiques (accès 
+						direct ou séquntiels), piles, files, structures;</li>
+						<li>Types abstraits de données simples : première approche de l'encapsulation</li>
+						<li>Notions de modularité</li>
+						<li>Premières notions de qualité (ex : nommage, assertions, documentation, sûreté de 
+						fonctionnement, jeu d'essais, performance...);</li>
+						<li>Lecture/écriture de fichiers</li>
+						<li>Présentation de la gestion de versions.</li>
+					</ul>
+					<p>
+						Cette ressources est à la base des apprentissages des compétences 1 et 2. En effet,
+						la réalisation d'un développement d'application et l'optimisation des applications
+						informatiques nécessitent l'apprentissage du développement.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.03</h3>
+				<h3>Introduction à l'architecture des ordinateurs</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 1 : Analyser un problème avec méthode</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est de découvrir la structure et les
+						composants d'un ordinateur. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Architecture générale d'un ordinateur, histoire et évolution de l'informatique;</li>
+						<li>Codage (codage des informations de base : nombres, caractères);</li>
+						<li>Arithmétique des traitements associés;</li>
+						<li>Etude d'un ordinateur personnel (composants...);</li>
+						<li>Evolution des technologiques et des systèmes.</li>
+					</ul>
+					<p>
+						Cette ressource permettra de découvrir les différents composants matériels et
+						logiciels internes qui constituent un ordinateur, de manière à appréhender le fonctionnement,
+						mais aussi les limites de leur utilisation.</p>
+				</div>
+			</section>	
+			<section class="box">
+				<h3>R1.04</h3>
+				<h3>Introduction aux systèmes d'exploitation et à leur fonctionnement</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 3 : Expérimenter la notion de compilation et les représentations bas niveau des données</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est de comprendre le rôle, les composants et le
+						fonctionnement d'un système d'exploitation. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Caractéristiques et types de systèmes d'exploitations;</li>
+						<li>Langage de commande (commandes de base, introduction à la programmation des scripts);</li>
+						<li>Gestion des processus (création, destruction, suivi, etc.);</li>
+						<li>Gestion des fichiers (types, droits, etc);</li>
+						<li>Gestion des utilisateurs (caractéristiques, création, suppression, etc.);</li>
+						<li>Principe de l'installation et de la configuration d'un système : notion de noyau, de
+						pilotes, de fichiers de configuration, boot système...</li>
+					</ul>
+					<p>
+						Cette ressource permettra de découvrir les principes d'un système d'exploitation, leur mode
+						de fonctionnement et les différents types existants. Elle contribuera à comprendre comment 
+						installer un système sur une marchine et à le personnaliser en développant des fonctions 
+						simples facilitant la configuration et le paramétrage.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.06</h3>
+				<h3>Mathématiques discrètes</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 4 : Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de ce module est de mettre en place les outils mathématiques
+						nécessaires au bases de l'informatique/ Les savoirs de référence suivants devront
+						être étudiés :</h4>
+						<li>Logique (prédicats, propositions...);</li>
+						<li>Théorie des ensembles;</li>
+						<li>Dénombrement;</li>
+						<li>Algèbre de Boole;</li>
+						<li>Arithmétique modulaire;</li>
+						<li>Relations, applications;</li>
+						<li>Numération.</li>
+					</ul>
+					<p>
+						Cette ressource aide à formaliser et lettre en oeuvre des outils mathématiques
+						pour l'informatique. Elle accompagne la mise en place des bases de données
+						en explicitant les structures fondamentales de ces dernirèes.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.07</h3>
+				<h3>Outils mathématiques fondamentaux</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 4 : Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est la remise à niveau des notions
+						mathématiques de base. Les savoirs de référence suivants devront
+						être étudiés :</h4>
+						<li>Calcul numérique et algébrique;</li>
+						<li>Systèmes et matrices (pivot de Gauss);</li>
+						<li>Graphes de fonction;</li>
+						<li>Polynômes;</li>
+						<li>Géométrie du plan.</li>
+					</ul>
+					<p>
+						Cette ressource donne les outils mathématiques fondamentaux nécessaires 
+						à la programmation informatique.</p>
+				</div>
+			</section>
+		</article>
+		
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
+		</div>
 		
 		<!--FOOTER-->
 		<footer>
@@ -51,15 +232,14 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
