--- a/4PageComp2.html
+++ b/4PageComp2.html
@@ -1,10 +1,10 @@
-<!-- PAGE COMPETENCE 2 -->
+<!-- PAGE COMPETENCE 3 -->
 <!DOCTYPE HTML>
 <html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<link href="style.css" rel="stylesheet">
-		<title>Compétence 2</title>	
+		<title>Compétence 3</title>	
 	</head>
 	
 	<body>
@@ -36,17 +36,16 @@
 		
 		<main>
 		<!-- TITRE -->
-		<h1 class="but">Optimiser des applications informatiques</h1>
+		<h1 class="but">Administrer des systèmes informatiques comunicants complexes</h1>
 		
 		<!-- ARTICLE 1 -->
 		<article class="flex">
-			<img src="img/competence2.png" alt="Niveau 1 : Appréhender et construire des algorithmes">
+			<img src="img/competence3.png" alt="Niveau 1 : Installer et configurer un poste de travail">
 			<ul>
-				<li>Analyser un problème avec méthode (découpage en éléments algorithmiques
-				simples, structure de données... </li>
-				<li>Comparer des algorithmes pour des pronlèmes classiques (tri simples, recherche...);</li>
-				<li>Expérimenter la notion de compilation et les représentations bas niveau des données</li>
-				<li>Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+				<li>Identifier les différents composants (matériels et logiciels) d'un système numérique</li>
+				<li>Utiliser les fonctionnalités de base d'un système multitâches / multiutilisateurs</li>
+				<li>Installer et configurer un système d'exploitation et des outils de développement</li>
+				<li>Configurer un poste de travail dans un réseau d'entreprise</li>
 			</ul>
 		</article>
 		
@@ -55,23 +54,21 @@
 			<h2>Evaluation de la compétence</h2>
 			<table>
 				<tr>
-					<th class="titre" colspan="6">Ressources intervenant dans la compétence 2</th>
+					<th class="titre" colspan="5">Ressources intervenant dans la compétence 3</th>
 				</tr>
 				<tr>
 					<th scope="row">Ress</th>
-					<th scope="col">R1.01</th>
 					<th scope="col">R1.03</th>
 					<th scope="col">R1.04</th>
-					<th scope="col">R1.06</th>
-					<th scope="col">R1.07</th>
+					<th scope="col">R1.10</th>
+					<th scope="col">R1.11</th>
 				</tr>
 				<tr>
 					<th scope="row">Coeff (en %)</th>
-					<td>24</td>
-					<td>3</td>
-					<td>3</td>
-					<td>15</td>
-					<td>15</td>
+					<td>21</td>
+					<td>21</td>
+					<td>12</td>
+					<td>6</td>
 				</tr>
 			</table>
 		</article>
@@ -80,10 +77,10 @@
 		<article>
 			<h2>SAE lié à la compétence</h2>
 			<p>
-			En partant d'un besoin exprimé par un client, il faut réaliser une implémentation,
-			comparer plusieurs approches pour la résolution d'un problème et effectuer des
-			mesures de performance simples. Cette SAE permet une première <strong>réflexion</strong>
-			autour des stratégies <strong>algorithmiques</strong> pour résoudre un même problème.
+			En partant d'un besoin exprimé par un client, il faut identifier
+			les outils les plus adaptés au besoins, les installer, les configurer et créer
+			une notice d'utilisation. Cette SAE permet d'expérimenter les missions d'installation
+			de poste de travail.
 			</p>
 		</article>
 		<div class="decorateur"></div>
@@ -91,41 +88,13 @@
 		<!-- ARTICLE 4 -->
 		<article class="articleSection">
 			<section class="box">
-				<h3>R1.01</h3>
-				<h3>Initiation au développement</h3>
-				<div>
-					<ul>
-						<h4>Apprentissages critiques</h4>
-						<li>AC 1 : Analyser un problème avec méthode</li>
-					</ul>
-					<ul>
-						<h4>L'objectif de cette ressource est l'initiation au développement. Les savoirs
-						de référence suivants devont être étudiés :</h4>
-						<li>Algorithmes fondamentaux (structures simples, recherche d'un élément,
-						parcours, tri...)</li>
-						<li>Algorithmes sur les structures de données (itératifs et/ou récursifs)</li>
-						<li>Manipulation de listes, tableaux, collections dynamiques, statiques (accès 
-						direct ou séquntiels), piles, files, structures;</li>
-						<li>Types abstraits de données simples : première approche de l'encapsulation</li>
-						<li>Notions de modularité</li>
-						<li>Premières notions de qualité (ex : nommage, assertions, documentation, sûreté de 
-						fonctionnement, jeu d'essais, performance...);</li>
-						<li>Lecture/écriture de fichiers</li>
-						<li>Présentation de la gestion de versions.</li>
-					</ul>
-					<p>
-						Cette ressources est à la base des apprentissages des compétences 1 et 2. En effet,
-						la réalisation d'un développement d'application et l'optimisation des applications
-						informatiques nécessitent l'apprentissage du développement.</p>
-				</div>
-			</section>
-			<section class="box">
 				<h3>R1.03</h3>
 				<h3>Introduction à l'architecture des ordinateurs</h3>
 				<div>
 					<ul>
 						<h4>Apprentissages critiques</h4>
-						<li>AC 1 : Analyser un problème avec méthode</li>
+						<li>AC 1 : Identifier les différents composants d'un
+						système numérique</li>
 					</ul>
 					<ul>
 						<h4>L'objectif de cette ressource est de découvrir la structure et les
@@ -141,14 +110,17 @@
 						logiciels internes qui constituent un ordinateur, de manière à appréhender le fonctionnement,
 						mais aussi les limites de leur utilisation.</p>
 				</div>
-			</section>	
+			</section>
 			<section class="box">
 				<h3>R1.04</h3>
 				<h3>Introduction aux systèmes d'exploitation et à leur fonctionnement</h3>
 				<div>
 					<ul>
 						<h4>Apprentissages critiques</h4>
-						<li>AC 3 : Expérimenter la notion de compilation et les représentations bas niveau des données</li>
+						<li>AC 2 : Utiliser les fonctionnalités de base d'un système 
+						multitâches / multiutilisateurs</li>
+						<li>AC 3 : Installer et configurer un système d'exploitation et 
+						des outils de développement</li>
 					</ul>
 					<ul>
 						<h4>L'objectif de cette ressource est de comprendre le rôle, les composants et le
@@ -169,60 +141,66 @@
 				</div>
 			</section>
 			<section class="box">
-				<h3>R1.06</h3>
-				<h3>Mathématiques discrètes</h3>
+				<h3>R1.10</h3>
+				<h3>Anglais technique</h3>
 				<div>
 					<ul>
 						<h4>Apprentissages critiques</h4>
-						<li>AC 4 : Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+						<li>AC1 : Identifier les différents composants d'un système
+						numérique</li>
 					</ul>
 					<ul>
-						<h4>L'objectif de ce module est de mettre en place les outils mathématiques
-						nécessaires au bases de l'informatique/ Les savoirs de référence suivants devront
-						être étudiés :</h4>
-						<li>Logique (prédicats, propositions...);</li>
-						<li>Théorie des ensembles;</li>
-						<li>Dénombrement;</li>
-						<li>Algèbre de Boole;</li>
-						<li>Arithmétique modulaire;</li>
-						<li>Relations, applications;</li>
-						<li>Numération.</li>
+						<h4>L'objectif de cette ressource est d'introduire l'anglais informatique et de développer
+						sa culture générale et scientifique. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Décrire en anglais les éléments liés aux applications (interface utilisateur, bases 
+						de données, messages d'erreur...);</li>
+						<li>Savoir maîtriser les techniques de présentation orale 1;</li>
+						<li>Rendre compte à l'écrit et à l'oral de façon informelle;</li>
+						<li>Utiliser la termnologie adéquate, les structures grammaticales adaptées et les outils
+						de la phonologie;</li>
+						<li>Trouver, consulter et comprendre des ressources en anglais (documentations, tutoriels...).</li>
 					</ul>
 					<p>
-						Cette ressource aide à formaliser et lettre en oeuvre des outils mathématiques
-						pour l'informatique. Elle accompagne la mise en place des bases de données
-						en explicitant les structures fondamentales de ces dernirèes.</p>
+						Cette ressources permet l'acquisition du vocabulaire de base de l'informatique technique qui est
+						utilisé très largement dans toute la discipline, en particulier dans les domaines les plus techniques.</p>
 				</div>
 			</section>
 			<section class="box">
-				<h3>R1.07</h3>
-				<h3>Outils mathématiques fondamentaux</h3>
+				<h3>R1.11</h3>
+				<h3>Bases de la communication</h3>
 				<div>
 					<ul>
 						<h4>Apprentissages critiques</h4>
-						<li>AC 4 : Formaliser et mettre en oeuvre des outils mathématiques pour l'informatique</li>
+						<li>AC 4 : Configurer un poste de travail dans un réseau d'entreprise</li>
 					</ul>
 					<ul>
-						<h4>L'objectif de cette ressource est la remise à niveau des notions
-						mathématiques de base. Les savoirs de référence suivants devront
-						être étudiés :</h4>
-						<li>Calcul numérique et algébrique;</li>
-						<li>Systèmes et matrices (pivot de Gauss);</li>
-						<li>Graphes de fonction;</li>
-						<li>Polynômes;</li>
-						<li>Géométrie du plan.</li>
+						<h4>L'objectif de cette ressource est d'aborder les fondamentaux de la
+						communication. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Communication verbale et non verbale;</li>
+						<li>Recherche documentaire, appropriation, réutilisation de
+						l'information, prise de notes, analse critique des sources;</li>
+						<li>Développement d'une attitude critique;</li>
+						<li>Recueil des besoins (méthode de collecte, d'enquête, d'intervieux);</li>
+						<li>Conception de documents de communication (sous divers formats dont numérique).</li>
 					</ul>
 					<p>
-						Cette ressource donne les outils mathématiques fondamentaux nécessaires 
-						à la programmation informatique.</p>
+						Cette ressource permet une approche sur l'importance de bien communiquer face 
+						à un client, de formuler ses questions de manière claire et pertinente pour 
+						recueillir les besoins du client. La ressource permet de développer l'esprit critique 
+						et la capacité d'analyse nécessaires à la collecte d'informations. Enfin, la ressource 
+						permet la mise en place et l'appropriation d'outils de communication pour restituer 
+						les informations (sous formes diverses du papier au web) à destination d'un client, 
+						ou d'une équipe.</p>
 				</div>
 			</section>
 		</article>
-		
+				
 		<!-- RETOUR AU DEBUT DE PAGE -->
 		<div class="flex">
 			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
+		
+		</main>
 		
 		<!--FOOTER-->
 		<footer>
