--- a/9PageContact.html
+++ b/9PageContact.html
@@ -20,12 +20,12 @@
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
 					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -35,8 +35,8 @@
 		</header>
 		
 		<main class="contact">	
-			<div class="contenu">
-				<h1>Contact</h1>
+			<div>
+				<h1 class="but">Contact</h1>
 				
 				<!--FORMULAIRE DE CONTACT-->
 				<article>
@@ -61,14 +61,21 @@
 				<!--INFORMATIONS/RENSEIGNEMENTS-->
 				<article id="carte" class= "butiut flex">
 					<div>
-						<img class="image" alt="photo IUT" src="img/photo_IUT.jpg">
+					<a href="https://iut.univ-tlse3.fr/">
+						<img class="img" alt="photo IUT" src="img/image_iut.png">
 						<p>133 B Avenue de Rangueil, 31400 TOULOUSE</p>
+					</a>
 					</div>
 					
 					<div>
 						<iframe src="https://www.google.fr/maps/place/133b+Av.+de+Rangueil,+31400+Toulouse/@43.5700779,1.462506,17z/data=!3m1!4b1!4m5!3m4!1s0x12aebc3f8512b055:0x275b84d278e27c18!8m2!3d43.570074!4d1.4646947" width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 					</div>
 				</article>
+			</div>
+			
+			<!-- RETOUR AU DEBUT DE PAGE -->
+			<div class="flex">
+				<a href="#top" class="retour">↑ Retour en haut ↑</a>
 			</div>
 		
 		</main>
@@ -81,15 +88,14 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
