--- a/3PageComp1.html
+++ b/3PageComp1.html
@@ -18,7 +18,7 @@
 				  <ul>
 					<li><a href="1PageAccueil.html">Accueil</a></li>
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
+					<li class="deroulant"><a href="3PageComp1.html">Compétences &ensp;</a>
 						<ul class="sous">
 							<li><a href="3PageComp1.html">Compétence 1</a></li>
 							<li><a href="4PageComp2.html">Compétence 2</a></li>
