--- a/5PageComp3.html
+++ b/5PageComp3.html
@@ -18,14 +18,14 @@
 				  <ul>
 					<li><a href="1PageAccueil.html">Accueil</a></li>
 					<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-					<li class="deroulant"><a href="3PageComp1">Compétences &ensp;</a>
+					<li class="deroulant"><a href="3PageComp1.html">Compétences &ensp;</a>
 						<ul class="sous">
-							<li><a href="3PageComp1">Compétence 1</a></li>
-							<li><a href="4PageComp2">Compétence 2</a></li>
-							<li><a href="5PageComp3">Compétence 3</a></li>
-							<li><a href="6PageComp4">Compétence 4</a></li>
-							<li><a href="7PageComp5">Compétence 5</a></li>
-							<li><a href="8PageComp6">Compétence 6</a></li>
+							<li><a href="3PageComp1.html">Compétence 1</a></li>
+							<li><a href="4PageComp2.html">Compétence 2</a></li>
+							<li><a href="5PageComp3.html">Compétence 3</a></li>
+							<li><a href="6PageComp4.html">Compétence 4</a></li>
+							<li><a href="7PageComp5.html">Compétence 5</a></li>
+							<li><a href="8PageComp6.html">Compétence 6</a></li>
 						</ul>
 					</li>
 					<li><a href="9PageContact.html">Contact</a></li>
@@ -34,11 +34,170 @@
 			</div>
 		</header>
 		
-		<main>	
-		<div class="contenu">
-
-		<h1> Compétence 3</h1>
-	
+		<main>
+		<!-- TITRE -->
+		<h1 class="but">Administrer des systèmes informatiques comunicants complexes</h1>
+		
+		<!-- ARTICLE 1 -->
+		<article class="flex">
+			<img src="img/competence3.png" alt="Niveau 1 : Installer et configurer un poste de travail">
+			<ul>
+				<li>Identifier les différents composants (matériels et logiciels) d'un système numérique</li>
+				<li>Utiliser les fonctionnalités de base d'un système multitâches / multiutilisateurs</li>
+				<li>Installer et configurer un système d'exploitation et des outils de développement</li>
+				<li>Configurer un poste de travail dans un réseau d'entreprise</li>
+			</ul>
+		</article>
+		
+		<!-- ARTICLE 2 -->
+		<article class="separateur">
+			<h2>Evaluation de la compétence</h2>
+			<table>
+				<tr>
+					<th class="titre" colspan="5">Ressources intervenant dans la compétence 3</th>
+				</tr>
+				<tr>
+					<th scope="row">Ress</th>
+					<th scope="col">R1.03</th>
+					<th scope="col">R1.04</th>
+					<th scope="col">R1.10</th>
+					<th scope="col">R1.11</th>
+				</tr>
+				<tr>
+					<th scope="row">Coeff (en %)</th>
+					<td>21</td>
+					<td>21</td>
+					<td>12</td>
+					<td>6</td>
+				</tr>
+			</table>
+		</article>
+		
+		<!-- ARTICLE 3 -->
+		<article>
+			<h2>SAE lié à la compétence</h2>
+			<p>
+			En partant d'un besoin exprimé par un client, il faut identifier
+			les outils les plus adaptés au besoins, les installer, les configurer et créer
+			une notice d'utilisation. Cette SAE permet d'expérimenter les missions d'installation
+			de poste de travail.
+			</p>
+		</article>
+		<div class="decorateur"></div>
+		
+		<!-- ARTICLE 4 -->
+		<article class="articleSection">
+			<section class="box">
+				<h3>R1.03</h3>
+				<h3>Introduction à l'architecture des ordinateurs</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 1 : Identifier les différents composants d'un
+						système numérique</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est de découvrir la structure et les
+						composants d'un ordinateur. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Architecture générale d'un ordinateur, histoire et évolution de l'informatique;</li>
+						<li>Codage (codage des informations de base : nombres, caractères);</li>
+						<li>Arithmétique des traitements associés;</li>
+						<li>Etude d'un ordinateur personnel (composants...);</li>
+						<li>Evolution des technologiques et des systèmes.</li>
+					</ul>
+					<p>
+						Cette ressource permettra de découvrir les différents composants matériels et
+						logiciels internes qui constituent un ordinateur, de manière à appréhender le fonctionnement,
+						mais aussi les limites de leur utilisation.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.04</h3>
+				<h3>Introduction aux systèmes d'exploitation et à leur fonctionnement</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 2 : Utiliser les fonctionnalités de base d'un système 
+						multitâches / multiutilisateurs</li>
+						<li>AC 3 : Installer et configurer un système d'exploitation et 
+						des outils de développement</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est de comprendre le rôle, les composants et le
+						fonctionnement d'un système d'exploitation. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Caractéristiques et types de systèmes d'exploitations;</li>
+						<li>Langage de commande (commandes de base, introduction à la programmation des scripts);</li>
+						<li>Gestion des processus (création, destruction, suivi, etc.);</li>
+						<li>Gestion des fichiers (types, droits, etc);</li>
+						<li>Gestion des utilisateurs (caractéristiques, création, suppression, etc.);</li>
+						<li>Principe de l'installation et de la configuration d'un système : notion de noyau, de
+						pilotes, de fichiers de configuration, boot système...</li>
+					</ul>
+					<p>
+						Cette ressource permettra de découvrir les principes d'un système d'exploitation, leur mode
+						de fonctionnement et les différents types existants. Elle contribuera à comprendre comment 
+						installer un système sur une marchine et à le personnaliser en développant des fonctions 
+						simples facilitant la configuration et le paramétrage.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.10</h3>
+				<h3>Anglais technique</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC1 : Identifier les différents composants d'un système
+						numérique</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est d'introduire l'anglais informatique et de développer
+						sa culture générale et scientifique. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Décrire en anglais les éléments liés aux applications (interface utilisateur, bases 
+						de données, messages d'erreur...);</li>
+						<li>Savoir maîtriser les techniques de présentation orale 1;</li>
+						<li>Rendre compte à l'écrit et à l'oral de façon informelle;</li>
+						<li>Utiliser la termnologie adéquate, les structures grammaticales adaptées et les outils
+						de la phonologie;</li>
+						<li>Trouver, consulter et comprendre des ressources en anglais (documentations, tutoriels...).</li>
+					</ul>
+					<p>
+						Cette ressources permet l'acquisition du vocabulaire de base de l'informatique technique qui est
+						utilisé très largement dans toute la discipline, en particulier dans les domaines les plus techniques.</p>
+				</div>
+			</section>
+			<section class="box">
+				<h3>R1.11</h3>
+				<h3>Bases de la communication</h3>
+				<div>
+					<ul>
+						<h4>Apprentissages critiques</h4>
+						<li>AC 4 : Configurer un poste de travail dans un réseau d'entreprise</li>
+					</ul>
+					<ul>
+						<h4>L'objectif de cette ressource est d'aborder les fondamentaux de la
+						communication. Les savoirs de référence suivants devront être étudiés :</h4>
+						<li>Communication verbale et non verbale;</li>
+						<li>Recherche documentaire, appropriation, réutilisation de
+						l'information, prise de notes, analse critique des sources;</li>
+						<li>Développement d'une attitude critique;</li>
+						<li>Recueil des besoins (méthode de collecte, d'enquête, d'intervieux);</li>
+						<li>Conception de documents de communication (sous divers formats dont numérique).</li>
+					</ul>
+					<p>
+						Cette ressource permet une approche sur l'importance de bien communiquer face 
+						à un client, de formuler ses questions de manière claire et pertinente pour 
+						recueillir les besoins du client. La ressource permet de développer l'esprit critique 
+						et la capacité d'analyse nécessaires à la collecte d'informations. Enfin, la ressource 
+						permet la mise en place et l'appropriation d'outils de communication pour restituer 
+						les informations (sous formes diverses du papier au web) à destination d'un client, 
+						ou d'une équipe.</p>
+				</div>
+			</section>
+		</article>
+				
+		<!-- RETOUR AU DEBUT DE PAGE -->
+		<div class="flex">
+			<a href="#top" class="retour">↑ Retour en haut ↑</a>
 		</div>
 		
 		</main>
@@ -51,15 +210,14 @@
 						<!--Plan du site-->
 						<li><a href="1PageAccueil.html">Accueil</a></li>
 						<li><a href="2PagePresentationBUT.html">Présentation du BUT</a></li>
-						</li>
 						<li><a href="3PageComp1.html">Compétences</a>
 							<ul>
-								<li><a href="3PageComp1">Compétence 1</a></li>
-								<li><a href="4PageComp2">Compétence 2</a></li>
-								<li><a href="5PageComp3">Compétence 3</a></li>
-								<li><a href="6PageComp4">Compétence 4</a></li>
-								<li><a href="7PageComp5">Compétence 5</a></li>
-								<li><a href="8PageComp6">Compétence 6</a></li>
+								<li><a href="3PageComp1.html">Compétence 1</a></li>
+								<li><a href="4PageComp2.html">Compétence 2</a></li>
+								<li><a href="5PageComp3.html">Compétence 3</a></li>
+								<li><a href="6PageComp4.html">Compétence 4</a></li>
+								<li><a href="7PageComp5.html">Compétence 5</a></li>
+								<li><a href="8PageComp6.html">Compétence 6</a></li>
 							</ul>
 						</li>
 						<li><a href="9PageContact.html">Contact</a></li>
